--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,5 +1,3 @@
-/* Header.module.scss */
-
 .header {
   display: flex;
   justify-content: space-between;
@@ -7,34 +5,21 @@
   padding: 2rem;
   background-color: #444;
   position: relative;
-  
-  // Define o pseudo-elemento para a borda animada
-  &::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 3px; // Altura da borda
-    background: linear-gradient(
-      to right,
-      transparent 0%,
-      rgba(11, 159, 186, 1) 50%,
-      transparent 100%
-    );
-    background-size: 200% 100%;
-    animation: slide-border 2s linear infinite;
-  }
-}
+  box-shadow: 1px 1px 10px 5px rgba(11, 159, 186, 1);
+    // box-shadow: 1px 1px 10px 5px rgba(11, 159, 186, 1);
+  animation: pulse-box-shadow 2s ease-in-out infinite;
 
-// Keyframes para animar o gradiente
-@keyframes slide-border {
+@keyframes pulse-box-shadow {
   0% {
-    background-position: 0 0;
+    box-shadow: 1px 1px 10px 5px rgba(11, 159, 186, 0.3);
+  }
+  50% {
+    box-shadow: 1px 1px 20px 5px rgba(11, 159, 186, 1);
   }
   100% {
-    background-position: 200% 0;
+    box-shadow: 1px 1px 10px 5px rgba(11, 159, 186, 0);
   }
+}
 }
 
 .logo {
@@ -45,16 +30,15 @@
   animation: pulse-box-shadow 2s ease-in-out infinite;
 }
 
-// Animação para o efeito de aparecer e sumir
 @keyframes pulse-box-shadow {
   0% {
-    box-shadow: 1px 1px 10px 5px rgba(11, 159, 186, 0); // Invisível
+    box-shadow: 1px 1px 10px 5px rgba(11, 159, 186, 0);
   }
   50% {
-    box-shadow: 1px 1px 20px 5px rgba(11, 159, 186, 1); // Máxima intensidade
+    box-shadow: 1px 1px 20px 5px rgba(11, 159, 186, 1);
   }
   100% {
-    box-shadow: 1px 1px 10px 5px rgba(11, 159, 186, 0); // Invisível novamente
+    box-shadow: 1px 1px 10px 5px rgba(11, 159, 186, 0);
   }
 }
 
