--- a/src/components/Contato/ContatoStyles.scss
+++ b/src/components/Contato/ContatoStyles.scss
@@ -1,122 +1,168 @@
 #contato {
-    background: #444;
+  background: #444;
 }
 
 .form-container {
-    width: 400px;
-    background: linear-gradient(#303030, #010101) padding-box,
-                linear-gradient(85deg, transparent 35%,rgb(0, 255, 255), rgb(0, 255, 255)) border-box;
-    border: 4px solid transparent;
-    padding: 32px 24px;
-    font-size: 14px;
-    font-family: inherit;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    box-sizing: border-box;
-    border-radius: 16px;
-    background-size: 200% 100%;
-    animation: gradient 5s ease infinite;
+  width: 400px;
+  background: linear-gradient(#303030, #010101) padding-box,
+    linear-gradient(85deg, transparent 35%, rgb(0, 255, 255), rgb(0, 255, 255))
+      border-box;
+  border: 4px solid transparent;
+  padding: 32px 24px;
+  font-size: 14px;
+  font-family: inherit;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  box-sizing: border-box;
+  border-radius: 16px;
+  background-size: 200% 100%;
+  animation: gradient 5s ease infinite;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
   }
 
-  @keyframes gradient {
-    0% {
-      background-position: 0% 50%;
-    }
-
-    50% {
-      background-position: 100% 50%;
-    }
-
-    100% {
-      background-position: 0% 50%;
-    }
+  50% {
+    background-position: 100% 50%;
   }
 
-  .form-container button:active {
-    scale: 0.95;
+  100% {
+    background-position: 0% 50%;
   }
+}
 
-  .form-container .form {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
+.form-container button:active {
+  scale: 0.95;
+}
 
-  .form-container .form-group {
-    display: flex;
-    flex-direction: column;
-    gap: 2px;
-  }
+.form-container .form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
 
-  .form-container .form-group label {
-    display: block;
-    margin-bottom: 10px;
-    color: #00d9ff;
-    font-weight: 600;
-    font-size: 1rem;
-  }
+.form-container .form-group {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+}
 
-  .form-container .form-group input {
-    width: 100%;
-    padding: 12px 16px;
-    border-radius: 8px;
-    color: #fff;
-    font-family: inherit;
-    background-color: transparent;
-    border: 1px solid #616161;
-  }
+.form-container .form-group label {
+  display: block;
+  margin-bottom: 10px;
+  color: #00d9ff;
+  font-weight: 600;
+  font-size: 1rem;
+}
 
-  .form-container .form-group textarea {
-    width: 100%;
-    padding: 12px 16px;
-    border-radius: 8px;
-    resize: none;
-    color: #fff;
-    height: 96px;
-    border: 1px solid #616161;
-    background-color: transparent;
-    font-family: inherit;
-  }
+.form-container .form-group input {
+  width: 100%;
+  padding: 12px 16px;
+  border-radius: 8px;
+  color: #fff;
+  font-family: inherit;
+  background-color: transparent;
+  border: 1px solid #616161;
+}
 
-  .form-container .form-group input::placeholder {
-    opacity: 0.5;
-  }
+.form-container .form-group textarea {
+  width: 100%;
+  padding: 12px 0;
+  border-radius: 8px;
+  resize: none;
+  color: #fff;
+  height: 96px;
+  border: 1px solid #616161;
+  background-color: transparent;
+  font-family: inherit;
+}
 
-  .form-container .form-group input:focus {
-    outline: none;
-    border-color: rgb(0, 255, 255);
-    box-shadow: 1px 1px 10px 5px rgba(0, 255, 255, 0.4);
-  }
+.form-container .form-group input::placeholder {
+  opacity: 0.5;
+}
 
-  .form-container .form-group textarea:focus {
-    outline: none;
-    border-color: rgb(0, 255, 255);
-    box-shadow: 1px 1px 10px 5px rgba(0, 255, 255, 0.5);
-  }
+.form-container .form-group input:focus {
+  outline: none;
+  border-color: rgb(0, 255, 255);
+  box-shadow: 1px 1px 10px 5px rgba(0, 255, 255, 0.4);
+}
 
-  .form-container .form-submit-btn {
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    align-self: flex-start;
-    font-family: inherit;
-    color: rgb(0, 255, 255);
-    font-weight: 600;
-    width: 40%;
-    background: #313131;
-    border: 1px solid rgb(0, 255, 255);
-    padding: 12px 16px;
-    font-size: inherit;
-    gap: 8px;
-    margin-top: 8px;
-    cursor: pointer;
-    border-radius: 6px;
-  }
+.form-container .form-group textarea:focus {
+  outline: none;
+  border-color: rgb(0, 255, 255);
+  box-shadow: 1px 1px 10px 5px rgba(0, 255, 255, 0.5);
+}
 
-  .form-container .form-submit-btn:hover {
-    background-color: transparent;
-    border-color: rgb(0, 255, 255);
-    box-shadow: 1px 1px 10px 5px rgb(0, 255, 255);
-  }
+.button2 {
+  display: inline-block;
+  transition: all 0.2s ease-in;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  color: #000;
+  padding: 0.7rem 1.7rem;
+  cursor: pointer;
+  font-size: 1.1rem;
+  font-weight: 600;
+  border-radius: 0.5rem;
+  background: #00d9ff;
+  border: 1px solid #00d9ff;
+}
+
+.button2:active {
+  color: #2fd0ec;
+  border: 1px solid #00d9ff;
+  box-shadow: inset 4px 4px 12px #00d9ff, inset -4px -4px 12px #00d9ff;
+  background: transparent;
+}
+
+.button2:before {
+  content: '';
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%) scaleY(1) scaleX(1.25);
+  top: 100%;
+  width: 140%;
+  height: 180%;
+  background-color: rgba(0, 0, 0, 0.05);
+  border-radius: 50%;
+  display: block;
+  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  z-index: -1;
+}
+
+.button2:after {
+  content: '';
+  position: absolute;
+  left: 55%;
+  transform: translateX(-50%) scaleY(1) scaleX(1.45);
+  top: 180%;
+  width: 160%;
+  height: 190%;
+  background-color: #000;
+  border-radius: 50%;
+  display: block;
+  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  z-index: -1;
+}
+.button2:hover {
+  color: #ffffff;
+  border: 1px solid transparent;
+  box-shadow: 0 0 12px 5px #00d9ff;
+}
+
+.button2:hover:before {
+  top: -35%;
+  background-color: #111111;
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
+
+.button2:hover:after {
+  top: -45%;
+  background-color: #111111;
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
