--- a/src/components/Contato/ContatoStyles.scss
+++ b/src/components/Contato/ContatoStyles.scss
@@ -98,71 +98,33 @@
 }
 
 .button2 {
-  display: inline-block;
-  transition: all 0.2s ease-in;
-  position: relative;
-  overflow: hidden;
-  z-index: 1;
-  color: #000;
-  padding: 0.7rem 1.7rem;
+  margin-bottom: 3rem;
+  font-size: 1.2rem;
+  padding: 1rem 2.5rem;
+  border: none;
+  outline: none;
+  border-radius: 0.4rem;
   cursor: pointer;
-  font-size: 1.1rem;
-  font-weight: 600;
-  border-radius: 0.5rem;
-  background: #00d9ff;
-  border: 1px solid #00d9ff;
+  text-transform: uppercase;
+  background-color: rgb(14, 14, 26);
+  color: rgb(234, 234, 234);
+  font-weight: 700;
+  transition: 0.6s;
+  box-shadow: 0px 0px 10px 5px #1f4c65;
+  -webkit-box-reflect: below 10px
+    linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4));
 }
 
 .button2:active {
-  color: #2fd0ec;
-  border: 1px solid #00d9ff;
-  box-shadow: inset 4px 4px 12px #00d9ff, inset -4px -4px 12px #00d9ff;
-  background: transparent;
+  scale: 0.92;
 }
 
-.button2:before {
-  content: '';
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%) scaleY(1) scaleX(1.25);
-  top: 100%;
-  width: 140%;
-  height: 180%;
-  background-color: rgba(0, 0, 0, 0.05);
-  border-radius: 50%;
-  display: block;
-  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
-  z-index: -1;
-}
-
-.button2:after {
-  content: '';
-  position: absolute;
-  left: 55%;
-  transform: translateX(-50%) scaleY(1) scaleX(1.45);
-  top: 180%;
-  width: 160%;
-  height: 190%;
-  background-color: #000;
-  border-radius: 50%;
-  display: block;
-  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
-  z-index: -1;
-}
 .button2:hover {
-  color: #ffffff;
-  border: 1px solid transparent;
-  box-shadow: 0 0 12px 5px #00d9ff;
-}
-
-.button2:hover:before {
-  top: -35%;
-  background-color: #111111;
-  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
-}
-
-.button2:hover:after {
-  top: -45%;
-  background-color: #111111;
-  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+  background: rgb(2, 29, 78);
+  background: linear-gradient(
+    270deg,
+    rgba(2, 29, 78, 0.681) 0%,
+    rgba(31, 215, 232, 0.873) 60%
+  );
+  color: rgb(4, 4, 38);
 }
