--- a/src/components/Contato/ContatoStyles.scss
+++ b/src/components/Contato/ContatoStyles.scss
@@ -16,7 +16,7 @@
   flex-direction: column;
   gap: 20px;
   box-sizing: border-box;
-  border-radius: 16px;
+  border-radius: 1rem;
   background-size: 200% 100%;
   animation: gradient 5s ease infinite;
 }
@@ -62,7 +62,7 @@
 .form-container .form-group input {
   width: 100%;
   padding: 12px 16px;
-  border-radius: 8px;
+  border-radius: 0.5rem;
   color: #fff;
   font-family: inherit;
   background-color: transparent;
@@ -72,7 +72,7 @@
 .form-container .form-group textarea {
   width: 100%;
   padding: 12px 0;
-  border-radius: 8px;
+  border-radius: 0.5rem;
   resize: none;
   color: #fff;
   height: 96px;
@@ -103,13 +103,12 @@
   padding: 1rem 2.5rem;
   border: none;
   outline: none;
-  border-radius: 0.4rem;
+  border-radius: 0.5rem;
   cursor: pointer;
-  text-transform: uppercase;
   background-color: rgb(14, 14, 26);
   color: rgb(234, 234, 234);
   font-weight: 700;
-  transition: 0.6s;
+  transition: 0.6s ease-in-out;
   box-shadow: 0px 0px 10px 5px #1f4c65;
   -webkit-box-reflect: below 10px
     linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4));
