--- a/src/components/Projetos/ProjetosStyles.scss
+++ b/src/components/Projetos/ProjetosStyles.scss
@@ -3,7 +3,7 @@
   height: 100%;
   display: flex;
   justify-content: center;
-  align-items: flex-start; /* Mantém os cards no topo */
+  align-items: flex-start;
   padding: 5rem;
   overflow-x: hidden;
 }
