adicionando footer animado e alguns ajustes

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,13 +5,12 @@
   padding: 2rem;
   background-color: #444;
   position: relative;
-  box-shadow: 1px 1px 10px 5px rgba(11, 159, 186, 1);
-    // box-shadow: 1px 1px 10px 5px rgba(11, 159, 186, 1);
+  box-shadow: 1px 1px 10px 5px rgba(0, 255, 255, 1);
   animation: pulse-box-shadow 2s ease-in-out infinite;
 
 @keyframes pulse-box-shadow {
   0% {
-    box-shadow: 1px 1px 10px 5px rgba(11, 159, 186, 0.3);
+    box-shadow: 1px 1px 10px 5px rgba(11, 159, 186, 0);
   }
   50% {
     box-shadow: 1px 1px 20px 5px rgba(11, 159, 186, 1);
@@ -23,25 +22,15 @@
 }
 
 .logo {
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
-  box-shadow: 1px 1px 10px 5px rgba(11, 159, 186, 1);
-  animation: pulse-box-shadow 2s ease-in-out infinite;
-}
+  box-shadow: 1px 1px 10px 1px rgba(0, 255, 255, 1);
 
-@keyframes pulse-box-shadow {
-  0% {
-    box-shadow: 1px 1px 10px 5px rgba(11, 159, 186, 0);
-  }
-  50% {
-    box-shadow: 1px 1px 20px 5px rgba(11, 159, 186, 1);
-  }
-  100% {
-    box-shadow: 1px 1px 10px 5px rgba(11, 159, 186, 0);
+  &:hover {
+    scale: 1.8;
   }
 }
-
 
 .hamburger {
   display: none;
@@ -123,7 +112,8 @@
   transition: box-shadow 0.7s ease-in-out;
 }
 
-.box::before, .box::after {
+.box::before,
+.box::after {
   content: '';
   position: absolute;
   top: 0;
@@ -156,44 +146,45 @@
     z-index: 1;
   }
   .box {
-  width: auto;
-  height: auto;
-  float: left;
-  transition: 0.5s linear;
-  position: relative;
-  display: block;
-  overflow: hidden;
-  padding: 0.5rem 1rem;
-  text-align: center;
-  margin: 0 5px;
-  background: transparent;
-  text-transform: uppercase;
-  color: #fff;
-  font-weight: 500;
-  border-radius: 0.9rem;
-  border: 1px solid transparent;
-}
+    width: auto;
+    height: auto;
+    float: left;
+    transition: 0.5s linear;
+    position: relative;
+    display: block;
+    overflow: hidden;
+    padding: 0.5rem 1rem;
+    text-align: center;
+    margin: 0 5px;
+    background: transparent;
+    text-transform: uppercase;
+    color: #fff;
+    font-weight: 500;
+    border-radius: 0.9rem;
+    border: 1px solid transparent;
+  }
 
-.box:hover {
-  box-shadow: 1px 1px 10px 5px rgba(0, 0, 0, 0.5);
-}
+  .box:hover {
+    box-shadow: 1px 1px 10px 5px rgba(0, 0, 0, 0.5);
+  }
 
-.box::before, .box::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 0;
-  height: 100%;
-  border-radius: 0.9rem;
-  box-sizing: border-box;
-  transition: width 0.4s ease-in-out;
-}
+  .box::before,
+  .box::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    border-radius: 0.9rem;
+    box-sizing: border-box;
+    transition: width 0.4s ease-in-out;
+  }
 
-.box:hover::before {
-  border: 2px solid #00d9ff;
-  width: 100%;
-}
+  .box:hover::before {
+    border: 2px solid #00d9ff;
+    width: 100%;
+  }
 
   .navActive {
     display: flex;
