--- a/src/components/Contato/ContatoStyles.scss
+++ b/src/components/Contato/ContatoStyles.scss
@@ -3,12 +3,12 @@
 }
 
 .form-container {
-  width: 400px;
+  width: 50%;
   background: linear-gradient(#303030, #111111) padding-box,
     linear-gradient(85deg, transparent 35%, rgb(0, 255, 255), rgb(0, 255, 255))
       border-box;
   border: 4px solid transparent;
-  padding: 32px 24px;
+  padding: 2rem 1.6rem;
   font-size: 14px;
   font-family: inherit;
   color: white;
