--- a/src/components/Sobre/SobreStyles.scss
+++ b/src/components/Sobre/SobreStyles.scss
@@ -7,12 +7,16 @@
 }
 
 .container-card {
-  width: 50vw;
-  height: 100vh;
+  width: 45vw;
+  height: 90vh;
   position: relative;
   border-radius: 10px;
-  box-shadow: 1px 1px 10px 5px rgba(0, 255, 255, 0.9);
+  
   overflow: hidden;
+}
+
+.container-card:hover {
+  box-shadow: 1px 1px 10px 5px rgba(0, 255, 255, 0.9);
 }
 
 .card-sobre {
