--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -2,7 +2,8 @@ main {
   background-color: #444;
   color: #fff;
   display: flex;
-  padding: 5rem 8rem;
+  padding: 2rem 8rem;
+  height: 90vh;
   justify-content: space-evenly;
   align-items: center;
 }
@@ -85,17 +86,17 @@ figure > img {
 @media (min-width: 460px) and (max-width: 759px) {
   main {
     padding: 1rem;
-    height: 83vh;
   }
   section > div {
     width: 100%;
 
     h2 {
-      font-size: 1.2rem;
+      font-size: 1.5rem;
     }
 
     h1 {
-      font-size: 2.5rem;
+      font-size: 3.5rem;
+      margin: 1rem 0;
     }
 
     p {
@@ -108,6 +109,5 @@ figure > img {
 @media (min-width: 760px) and (max-width: 999px) {
   main {
     padding: 2rem;
-    height: 75vh;
   }
 }
