--- a/src/components/Tecnologias/TecnologiasStyle.scss
+++ b/src/components/Tecnologias/TecnologiasStyle.scss
@@ -3,19 +3,81 @@
   justify-content: center;
   padding: 1.2rem;
   background-color: #444;
+
+  @media (min-width: 200px) and (max-width: 459px) {
+    grid-template-columns: 1fr; // Uma coluna para telas pequenas
+    gap: 1.5rem;
+    padding: 2rem 0;
+  }
+
+  @media (min-width: 460px) and (max-width: 759px) {
+    grid-template-columns: 1fr 1fr; // Duas colunas
+    gap: 2rem;
+    padding: 2rem 0;
+  }
+
+  @media (min-width: 760px) and (max-width: 999px) {
+    grid-template-columns: repeat(3, 1fr); // Três colunas para telas médias
+    gap: 2.5rem;
+    padding: 4rem;
+  }
 }
 
 .section-cards {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr; // Configuração padrão
   gap: 2.2rem;
+  width: 80%;
   padding: 5rem;
+
+  @media (min-width: 200px) and (max-width: 459px) {
+    grid-template-columns: 1fr; // Uma coluna para telas pequenas
+    gap: 1.5rem;
+    padding: 0;
+  }
+
+  @media (min-width: 460px) and (max-width: 759px) {
+    grid-template-columns: 1fr; // Duas colunas
+    gap: 2rem;
+    padding: 0;
+  }
+
+  @media (min-width: 760px) and (max-width: 999px) {
+    grid-template-columns: repeat(3, 1fr); // Três colunas para telas médias
+    gap: 2rem;
+    padding: 0;
+  }
+
+  @media (min-width: 1518px) {
+    grid-template-columns: repeat(4, 1fr); // Quatro colunas para telas grandes
+    gap: 3rem;
+    padding: 5rem;
+  }
+}
+
+.cards:nth-child(7) {
+  grid-column: 2 / 3;
+
+  @media (min-width: 200px) and (max-width: 459px) {
+    grid-column: auto; // Ajusta para ocupar a única coluna
+  }
+
+  @media (min-width: 460px) and (max-width: 759px) {
+    grid-column: auto; // Ajusta para ocupar a única coluna
+  }
+
+  @media (min-width: 760px) and (max-width: 999px) {
+    grid-column: 2 / 3; // Ajuste opcional para centralização
+  }
+
+  @media (min-width: 1518px) {
+    grid-column: auto; // Pode ser ajustado conforme necessário
+  }
 }
 
 .cards {
-  width: 45dvh;
-  height: 65dvh;
+  width: 100%;
+  height: 60dvh;
   position: relative;
   display: flex;
   place-content: center;
@@ -25,6 +87,21 @@
   gap: 1rem;
   border-radius: 1rem;
   transition: 0.3s ease-in-out;
+
+  @media (min-width: 200px) and (max-width: 459px) {
+    width: 100%; // Ocupa toda a largura disponível
+    height: 450px;
+  }
+
+  @media (min-width: 760px) and (max-width: 999px) {
+    width: 100%;
+    height: 300px;
+  }
+
+  @media (min-width: 1518px) {
+    width: 100%;
+    height: 70dvh;
+  }
 
   svg {
     font-size: 6rem;
@@ -89,10 +166,12 @@
 .cards h2 {
   font-size: 2.2rem;
   margin-bottom: 1rem;
+  color: #e8e8e8;
   filter: drop-shadow(0px 1px 8px rgb(0, 225, 255));
 }
 
 .cards .paragrafo {
-  text-align: left;
+  text-align: center;
   font-size: 1.2rem;
+  color: #e8e8e8;
 }
