--- a/src/components/Home/HomeStyles.scss
+++ b/src/components/Home/HomeStyles.scss
@@ -1,9 +1,9 @@
-main {
-  background-color: #444;
+#home {
+  background: #444;
   color: #fff;
   display: flex;
   padding: 2rem 8rem;
-  height: 90vh;
+  height: 100vh;
   justify-content: space-evenly;
   align-items: center;
 }
