--- a/src/components/Home/HomeStyles.scss
+++ b/src/components/Home/HomeStyles.scss
@@ -6,6 +6,19 @@
   height: 100vh;
   justify-content: space-evenly;
   align-items: center;
+
+  @media (min-width: 200px) and (max-width: 459px) {
+    width: 100%;
+    padding: 1.5rem;
+  }
+  @media (min-width: 460px) and (max-width: 759px) {
+    width: 100%;
+    padding: 1rem;
+  }
+  @media (min-width: 759px) and (max-width: 999px) {
+    width: 100%;
+    padding: 1rem 2rem;
+  }
 }
 
 section > div {
