--- a/src/components/Tecnologias/TecnologiasStyle.scss
+++ b/src/components/Tecnologias/TecnologiasStyle.scss
@@ -5,19 +5,19 @@
   background-color: #444;
 
   @media (min-width: 200px) and (max-width: 459px) {
-    grid-template-columns: 1fr; // Uma coluna para telas pequenas
+    grid-template-columns: 1fr;
     gap: 1.5rem;
     padding: 2rem 0;
   }
 
   @media (min-width: 460px) and (max-width: 759px) {
-    grid-template-columns: 1fr 1fr; // Duas colunas
+    grid-template-columns: 1fr 1fr;
     gap: 2rem;
     padding: 2rem 0;
   }
 
   @media (min-width: 760px) and (max-width: 999px) {
-    grid-template-columns: repeat(3, 1fr); // Três colunas para telas médias
+    grid-template-columns: repeat(3, 1fr);
     gap: 2.5rem;
     padding: 4rem;
   }
@@ -95,7 +95,7 @@
 
   @media (min-width: 760px) and (max-width: 999px) {
     width: 100%;
-    height: 300px;
+    height: 400px;
   }
 
   @media (min-width: 1518px) {
@@ -146,6 +146,8 @@
 .cards h2,
 .cards .paragrafo {
   display: none;
+
+  
 }
 
 .cards:hover {
@@ -168,10 +170,24 @@
   margin-bottom: 1rem;
   color: #e8e8e8;
   filter: drop-shadow(0px 1px 8px rgb(0, 225, 255));
+  text-align: center;
+
+  @media (min-width: 760px) and (max-width: 999px) {
+    font-size: 1.5rem;
+    text-align: center;
+  }
+  @media (min-width: 999px) and (max-width: 1200px) {
+    font-size: 1.7rem;
+    text-align: center;
+  }
 }
 
 .cards .paragrafo {
   text-align: center;
   font-size: 1.2rem;
   color: #e8e8e8;
+
+  @media (min-width: 760px) and (max-width: 999px) {
+    font-size: 1.2rem;
+  }
 }
